# wxGraphEditor

./: .gitignore  CMakeLists.txt  README.md
form/: asd.fbp
include/: customDialog.h  graph.h  gui.h  guiTable.h  guifrmMain.h  node.h  table.h  tools.h
src/: customDialog.cpp  graph.cpp  gui.cpp  guiTable.cpp  guifrmMain.cpp  main.cpp  node.cpp  table.cpp  tools.cpp
